fix: distorted images border

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,6 @@
   .contactInput {
     @apply outline-none bg-slate-400/10 rounded-sm border-b border-red-800/50 px-2 py-1 sm:px-4 sm:py-3 md:px-6 md:py-4 text-gray-400 placeholder-slate-400/10 transition-all focus:border-orange-400/50 hover:border-orange-400/50;
   }
-
 }
 
 .swiper-pagination-bullet {
@@ -22,5 +21,5 @@
 }
 
 :root {
-  --swiper-theme-color: #990000 !important;
+  --swiper-theme-color: #660000 !important;
 }
